[gd_scene load_steps=3 format=3 uid="uid://b8r3r15i4iet5"]

[ext_resource type="Script" path="res://Scripts/DebugMainMenu.gd" id="1_s5ngn"]
[ext_resource type="Script" path="res://Scripts/Authenticate.gd" id="2_4cfio"]

[node name="DebugMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s5ngn")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 50
text = "Old Stock Debug Menu"
horizontal_alignment = 1

[node name="Button" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Debug"

[node name="Button2" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Level 1"

[node name="Button3" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Level 2"

[node name="Button4" type="Button" parent="GridContainer"]
layout_mode = 2
disabled = true
text = "High Scores"

[node name="Authentication" type="Control" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("2_4cfio")

[node name="VBoxContainer" type="VBoxContainer" parent="Authentication"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -247.0
offset_top = -190.0
offset_right = 247.0
grow_horizontal = 2
grow_vertical = 0

[node name="Warning" type="Label" parent="Authentication/VBoxContainer"]
layout_mode = 2
text = "DO NOT USE YOUR REAL EMAIL AND/OR PASSWORD"
horizontal_alignment = 1

[node name="Warning2" type="Label" parent="Authentication/VBoxContainer"]
layout_mode = 2
text = "USE PRETEND ONES ONLY"
horizontal_alignment = 1

[node name="Warning3" type="Label" parent="Authentication/VBoxContainer"]
layout_mode = 2
text = "E.G. conor@godotgame.com, testpassword"
horizontal_alignment = 1

[node name="StateLabel" type="Label" parent="Authentication/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Not Logged In"
horizontal_alignment = 1

[node name="Name" type="LineEdit" parent="Authentication/VBoxContainer"]
layout_mode = 2
placeholder_text = "Name (Not Required for Log In)"
alignment = 1

[node name="EmailInput" type="LineEdit" parent="Authentication/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Email"
alignment = 1

[node name="PasswordInput" type="LineEdit" parent="Authentication/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Password"
alignment = 1

[node name="Login" type="Button" parent="Authentication/VBoxContainer"]
layout_mode = 2
text = "Log In"

[node name="SignUp" type="Button" parent="Authentication/VBoxContainer"]
layout_mode = 2
text = "Sign Up"

[connection signal="pressed" from="GridContainer/Button" to="." method="_debugmenu_buttons" binds= ["res://Scenes/Debug.tscn"]]
[connection signal="pressed" from="GridContainer/Button2" to="." method="_debugmenu_buttons" binds= ["res://Scenes/Level1.tscn"]]
[connection signal="pressed" from="GridContainer/Button3" to="." method="_debugmenu_buttons" binds= ["res://Scenes/Level2.tscn"]]
[connection signal="pressed" from="GridContainer/Button4" to="." method="_debugmenu_buttons" binds= ["res://Scenes/HighScore.tscn"]]
[connection signal="pressed" from="Authentication/VBoxContainer/Login" to="Authentication" method="_on_login_button_pressed"]
[connection signal="pressed" from="Authentication/VBoxContainer/SignUp" to="Authentication" method="_on_signup_button_pressed"]
